--- a/2025_Rus/11To_Stop_the_war_in_1_day.htm
+++ b/2025_Rus/11To_Stop_the_war_in_1_day.htm
@@ -1,1 +1,345 @@
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link href="../css.css" rel="stylesheet" type="text/css">
+<title> Divine works </title>
+</head>
+
+<body>
+
+<table cellpadding="0" cellspacing="0" width="100%">
+
+<tr>
+ <th colspan=2> <br/> <br/> </th>
+</tr>
+
+<tr>
+  <td width="400" valign="top">
+
+<ul>
+<li>  <a href="../index_rus.htm">
+     Главная </a>
+ </li>
+
+
+
+<li>  <h4> 2025 </h4>
+ </li>
+
+<li>   <a href="../2025_Rus/11To_Stop_the_war_in_1_day.htm">
+     Остановить войну за 1 день </a>
+ </li>
+<li>   <a href="../2025_Rus/12Kaliningrad_corridor_Letter.htm">
+     Калининградский коридор; Нет Войне </a>
+ </li>
+<li>   <a href="../2025_Rus/13Appeal_23_Black_swan.htm">
+     Обращение 23 Черный лебедь </a>
+ </li>
+<li>   <a href="../2025_Rus/14Womens_front.htm">
+     Женский фронт </a>
+ </li>
+<li>   <a href="../2025_Rus/15Anti-Ukrain_policy_of_Ukrainian_governm.htm">
+     Антиукраинская политика украинского правительства </a>
+ </li>
+<li>   <a href="../2025_Rus/16Multi-move_Reforming_the_UN.htm">
+     Многоходовка Реформирование ООН </a>
+ </li>
+<li>   <a href="../2025_Rus/21Free_Russia_Program.htm">
+     Программа Свободной России; Интернационалисты; Любовь спасет Украину </a>
+ </li>
+<li>   <a href="../2025_Rus/22The_weakest_link.htm">
+     Самое слабое звено; Кто должен быть казнен за убийство 200 рожениц </a>
+ </li>
+<li>   <a href="../2025_Rus/23Manipulation_of_the_people.htm">
+     Манипуляция народом; США Трамп; Комментарии Мои </a>
+ </li>
+<li>   <a href="../2025_Rus/31Deliberative_network.htm">
+     Совещательная сеть - Альтернатива для Германии </a>
+ </li>
+<li>   <a href="../2025_Rus/32Crisis_of_Democracy.htm">
+     Кризис Демократии </a>
+ </li>
+<li>   <a href="../2025_Rus/33Peoples_rule.htm">
+     НародоПравление </a>
+ </li>
+<li>   <a href="../2025_Rus/34Migrants_Solution.htm">
+     Мигранты Решение </a>
+ </li>
+<li>   <a href="../2025_Rus/35Greenland_breakthrough_of_Anarchism.htm">
+     Гренландский прорыв Анархизма; Прагматическая инициатива </a>
+ </li>
+<li>   <a href="../2025_Rus/41Market_property.htm">
+     Рыночная собственность </a>
+ </li>
+<li>   <a href="../2025_Rus/43about_Models.htm">
+     о Моделях; Ненаучность Марксизма; Монополизм и поляризация </a>
+ </li>
+<li>   <a href="../2025_Rus/50Drugs.htm">
+     Наркотики; Окончательное решение цыганского вопроса </a>
+ </li>
+<li>   <a href="../2025_Rus/60Death_of_God.htm">
+     Смерть Бога. Бог без Бога.  </a>
+ </li>
+<li>   <a href="../2025_Rus/70Awl_for_soap_My_mistake_1987.htm">
+     Шило на мыло Моя ошибка 1987; ДВК </a>
+ </li>
+<li>   <a href="../2025_Rus/90Antidepressant_psychic_method_My.htm">
+     Антидепрессант псих методика; Другие звезды - Метод перепрогр-я подсознания; Педагогика Самосознания </a>
+ </li>
+
+
+
+<li>  <h4> 2024 </h4>
+ </li>
+
+<li>   <a href="../2024_Rus/11The_AI_threat_is_from_humans.htm">
+     ИИ-угроза - от людей </a>
+ </li>
+<li>   <a href="../2024_Rus/12Deliberative_network.htm">
+     Совещательная сеть </a>
+ </li>
+<li>   <a href="../2024_Rus/21Anarchism_and_Capitalism.htm">
+     Анархизм и Капитализм </a>
+ </li>
+<li>   <a href="../2024_Rus/22Can_Anarchy_be_Effective_Letter_to_NAFO.htm">
+     Может ли Анархия быть эффективной. Письмо к NAFO </a>
+ </li>
+<li>   <a href="../2024_Rus/23Anarchism_and_Nonviolence.htm">
+     Анархизм Ненасилие </a>
+ </li>
+<li>   <a href="../2024_Rus/24Criticism_of_Program_of_ComParty_Britain.htm">
+     Критика Программы Компартии Великобритании </a>
+ </li>
+<li>   <a href="../2024_Rus/31Breaking_deadlock_Letter_to_EconomistMag.htm">
+     Выход из тупика. Письмо в Журнал Economist  </a>
+ </li>
+<li>   <a href="../2024_Rus/32Getting_ready_to_kiss_Putin-s_ass.htm">
+     Готовимся целовать Путину попу. Непримиримые </a>
+ </li>
+<li>   <a href="../2024_Rus/33Demonopolization_of_the_Army_Free_Army.htm">
+     Демонополизация армии. Свободная армия </a>
+ </li>
+<li>   <a href="../2024_Rus/41The_Free_Russia_Program.htm">
+     Программа Свободной России </a>
+ </li>
+<li>   <a href="../2024_Rus/51Anti-migration_democratic_initiative.htm">
+     Анти-миграционная демократич инициатива </a>
+ </li>
+<li>   <a href="../2024_Rus/71I_have_a_dream.htm">
+     Я имею мечту </a>
+ </li>
+<li>   <a href="../2024_Rus/81Astronomer_Concept.htm">
+     Астроном Концепт </a>
+ </li>
+
+
+<li>  <a href="../2014_rus.htm">
+     <h4> 2014 </h4> </a>
+ </li>
+</ul>
+
+</td>
+
+<td valign="top">
+
+<table align="center" width="300" border="0" bgcolor="#C1E0FF">
+ <tr>
+  <td align="center"> <a href="../index.htm"> <img src="../images/Eng.jpg" height="22" width="32" /> <strong> eng </strong> </a> </td>
+  <td align="center"> <a href="../index_deu.htm"> <img src="../images/Deu.png" height="22" width="32" /> <strong> deu </strong> </a> </td>
+  <td align="center"> <img src="../images/Rus.png" height="22" width="32" /> <strong> рус </strong> </td>
+ </tr>
+</table>
+
+
+
+﻿
+
+
+
+<h2>Остановить войну за 1 день:</h2>
+<p>Прекратить войну в Украине за 1 день возможно.<br />
+  Для этого необходимо ликвидировать ядерного террориста,  который взял в заложники американцев, по сравнению с которым Усама Бен Ладен есть  мелкий террорист.</p>
+
+<h4>Прекратить войну просто - на 1, 2, 3:</h4>
+
+<h5>1. Убить Путина:</h5>
+<p>В начале войны это бы ничего не дало, т.к. была крупная  группа потенциальных бенефициаров, надеющихся на большие выгоды малыми тратами.<br />
+  Спустя 3 года эта группа уже реальных бенефициаров,  получающих выгоду от войны,  скукожилась  на порядок.<br />
+  Если персоналистский диктатор исчезнет, то сегодня сторонники  мира в элите РФ победят кровожадных.<br />
+  Запад теряет триллионы долларов от войны.<br />
+  Ему выгоднее инвестировать 1 трлн $ в ликвидацию главной  &quot;скрепы&quot; фашизма.<br />
+  Путин вынужден платить по трлн/год  тысяче телохранителей, тогда как Западу достаточно заплатить трлн лишь 1-му из  них и лишь единовременно.<br />
+  Точнее, оптимально платить - разным информаторам, но по  сотне млрд долларов акциями каждой семье, как это делает Израиль.<br />
+  Вернуть арестованные русские  активы русским <a href="#_Hlk188789876">легитимным</a> (<a href="#_Hlk188789876">Референдум_провести</a>)  оппозиционерам=ликвидаторам террористов.<br />
+  Можно провести суд над Путиным с соблюдением всех  международных протоколов тоже.<br />
+  Но убить Путина необходимо при любом раскладе.<br />
+  Убив одного самого страшного террориста в Истории, Вы  спасете от смерти 1 млн зомби.<br />
+  Если бы Трамп хотел, чтобы за 1  день Россия прекратила войну и согласилась на ввод в Украину западных  миротворцев, то помог бы противникам Путина ликвидировать ключевых террористов.</p>
+
+<h5>2. Контрпропаганда:</h5>
+<p>Профинансировать запуск Звездолетом мощных спутников прямой  трансляции на телефоны россиян разоблачений мифов разжигающих ненависть. <br />
+  Война в эпоху интернета - это нонсенс.<br />
+  Террористический режим в России держится только на  пропаганде.<br />
+  С нуля технологию создавать не надо. Надо лишь  усовершенствовать Starlink V3, и  инвестировать в их работу над Россией. Над Россией они все равно простаивают.<br />
+  Это будет самая выгодная инвестиция в истории Америки.<br />
+  Контрпропаганда более, чем на  порядка выгоднее традиционного оружия:<br />
+  1. Предотвращает миллионы  смертей;<br />
+  2. Эффективнее;<br />
+  3. Дешевле.<br />
+  Контрпропаганда - это не ответная  пропаганда, а разоблачение манипуляций и фейков.</p>
+
+<h5>3. <a name="_Hlk188789876" id="_Hlk188789876"></a><a name="_Hlk188789853" id="_Hlk188789853">Референдум </a>о мире провести в России:</h5>
+<p>Собрать группу авторитетных наблюдателей, пользующихся  доверием и ценящих свое положение, которые гарантируют тайну голосования.<br />
+  Каждый из них будет свидетельствовать, что тысяча россиян,  за которых он отвечает, проголосовала дистанционно именно так, как они  проголосовали, но при этом не разглашать кто как проголосовал.</p>
+
+<h5>4. Составить график потерь для  террористов:</h5>
+<p>С 01.01.2026 они теряют 100% пенсии с конфискацией имущества  семей в пользу недовольных войной.</p>
+
+<h5>5. Составить график снижения импорта  нефти из России:</h5>
+<p>Это позволит разрешить украинцам ликвидировать  инфраструктуру нефтяного экспорта РФ. <br />
+  Морская блокада НАТО проливов  рискованна и неэффективна.<br />
+  На самом деле доля России на рынке нефти незначительна и  негативная волатильность цен возможна лишь при неожиданных действиях,<br />
+  &quot;Зеленый переход&quot; возможен, прежде всего, за счет  отказа от нефти России.</p>
+
+<h4>Старая ре-индустриализация это тупик:</h4>
+<p>Протекционизм и пошлины навредят Америке не меньше, чем Китаю.<br />
+  - Америка была великой за счет качественного технологического  лидерства.<br />
+  Надо не восстанавливать старые заводы, а развивать  технологии отрыва от конкурентов снова.<br />
+  Это - технологии безопасности  - сегодня.<br />
+  Они будут локомотивом всей экономики Америки - завтра.</p>
+
+<h4>СОИ-2.0:</h4>
+<p>Американцам нужна безопасность,  прежде всего, а не &quot;Лунные врата&quot;.<br />
+  Байден прав – угроза ядерной войны важнее, чем Украина.<br />
+  Однако санкции против Путина бесполезны.<br />
+  Но если появится надежная защита, то соблазн и риск ядерной  войны упадут на порядок.<br />
+  Если в 1983-м СОИ была утопией, то сегодня она реализуема на  100%.</p>
+<p>Оптимальной по соотношению стоимость/надежность является  система из 20 000 поражающих подвижных элементов находящихся на низких орбитах.<br />
+  При современных возможностях связи и обработки данных, такая  система сможет отразить даже массированную атаку межконтинентальных  баллистических маневрирующих боеголовок.<br />
+  Масса каждого поражающего элемента может быть не больше, чем  у спутника Starlink V3.<br />
+  Стоимость его будет  близкой к стоимости Starlink V3 тоже.<br />
+  Планы Илона Маска -  чтобы дешевые запуски Starship производились ежедневно. <br />
+  Каждый запуск Starship  будет выводить 60 Starlink V3. <br />
+  Таким образом,  надежная система безопасности Человечества может быть создана за 1 год.</p>
+
+<h5>Технологии определяют стратегию:</h5>
+<p>Сегодня оптимальной  технологией безопасности является - ликвидация ключевых террористов,  пропагандистов и собственников.<br />
+  Ликвидация сотни  главарей-террористов по сравнению с крупномасштабными боевыми действиями:<br />
+  1. Дешевле;<br />
+  2. Не даст повода для  ядерной войны и резко снизит ее риск;<br />
+  3. Сопровождается на  порядки меньшими смертями людей.<br />
+  Сегодня возможны технологии безопасности, действующие автономно в  управляющих центрах террористов, включающие например, оптические (9,12&nbsp;mkm) ретрансляторы, которые прежде не  существовали.</p>
+<p>1. Сетевая общедоступная не-летальная технология  безопасности повысит устойчивость  демократии;<br />
+  2. Правители неустойчивой  демократии США менее опасны, чем диктатуры России.<br />
+  США угрожает  олигархия. -<br />
+  В ИИ-эпоху  разделение властей больше не гарантирует устойчивость демократии.<br />
+  Необходим  механизм демократического контроля контента, например, через Starlink.<br />
+  Трамп похож на  Путина, но сегодня главной угрозой демократии в США является – воздействие, соблазн диктатуры в России на США.<br />
+  Трамп смешон в том,  как он отказывается от своих необдуманных обещаний.</p>
+<p>&quot;Connor&quot;</p>
+<p>Сегодня, системы, включающие оптические (9,12 mkm) ретрансляторы и сетевые крылатые  микро-ракеты с парализующими элементами способны - автономно действовать в управляющих  центрах террористов<br />
+  5000<br />
+  03.11.2024-10.02.2025</p>
+
+<h2>Stop the war in 1 day:</h2>
+<p>It is possible to stop the war in Ukraine in 1  day.<br />
+  To do this,  it is necessary to eliminate the nuclear terrorist who took Americans hostage,  compared to whom Osama Bin Laden is a small terrorist.</p>
+
+<h4>Stopping the war is simple – by 1, 2, 3:</h4>
+
+<h5>1. Kill Putin:</h5>
+<p>At the  beginning of the war, this would have done nothing, since there was a large  group of potential beneficiaries hoping for big benefits with little expense.<br />
+  After 3  years, this group of real beneficiaries, benefiting from the war, has shrunk by  an order of magnitude.<br />
+  If the  personalistic dictator disappears, then today the supporters of peace in the  Russian elite will defeat the bloodthirsty ones.<br />
+  The West is  losing trillions of dollars from the war.<br />
+  It is more  profitable for it to invest $1 trillion in the elimination of the main  &quot;bond&quot; of fascism.<br />
+  Putin is  forced to pay a trillion/year to a  thousand bodyguards, while the West enough to pay trillion only one of them and  only one time.<br />
+  More  precisely, it is optimal to pay - to different informants, but a hundred  billion dollars in shares to each family, as Israel does.<br />
+  Return the arrested Russian assets to the  Russian legitimate (<a href="#_Hlk188814420">Hold the  referendum</a>)  oppositionists=liquidators of terrorists.<br />
+  It is also  possible to hold a trial of Putin in compliance with all international  protocols.<br />
+  But it is  necessary to kill Putin in any case.<br />
+  By killing  one of the most terrible terrorists in History, you will save 1 million zombies  from death.<br />
+  If Trump wanted Russia to end the war in one day  and agree to the introduction of Western peacekeepers into Ukraine, he would  have helped Putin’s opponents eliminate key terrorists.</p>
+
+<h5>2. Counter-propaganda:</h5>
+<p>Fund the  launch of powerful satellites by Starship to broadcast live to the phones of  Russians debunking myths that incite hatred.<br />
+  War in the  age of the Internet is nonsense.<br />
+  The  terrorist regime in Russia is based only on propaganda.<br />
+  There is no  need to create technology from scratch. We just need to improve Starlink V3,  and invest in their work above Russia. They doesn't work anyway over Russia.<br />
+  This will  be the most profitable investment in the history of America.<br />
+  Counter-propaganda is more than an order of  magnitude more profitable than traditional weapons:<br />
+  1. Prevents millions of deaths;<br />
+  2. More effective;<br />
+  3. Cheaper.<br />
+  Counter-propaganda is not reciprocation propaganda,  but the exposure of manipulations and fakes.</p>
+
+<h5>3. <a name="_Hlk188814420" id="_Hlk188814420">Hold the referendum </a>on  peace in Russia:</h5>
+<p>Assemble a  group of authoritative observers who are trusted and value their position, who  will guarantee the secrecy of the vote.<br />
+  Each of  them will testify that a thousand Russians for whom he is responsible voted  remotely exactly as they voted, but at the same time not disclose who voted  how.</p>
+
+<h5>4. Make a schedule of losses for terrorists:</h5>
+<p>From 01.01.2026,  they will lose 100% of their pensions with the confiscation of family property  in favor of those dissatisfied with the war.</p>
+
+<h5>5. Make a schedule of reducing oil imports from Russia:</h5>
+<p>This will  allow the Ukrainians to liquidate the infrastructure of Russian oil exports. <br />
+  NATO's naval blockade of straits is risky and ineffective. <br />
+  In fact,  the share of Russia in the oil market is insignificant and negative price  volatility is possible only with unexpected actions,<br />
+  The &quot;green transition&quot;  is possible, first of all,  due to the abandonment of  Russian oil.</p>
+
+<h4>Old re-industrialization is a dead end:</h4>
+<p>Protectionism and tariffs will harm America no  less than China.<br />
+  - America  was great due to its qualitative technological leadership.<br />
+  It is  necessary not to restore old factories, but to develop technologies to break  away from competitors again.<br />
+  These are  security technologies - today.<br />
+  They will  be the locomotive of the entire American economy - tomorrow.</p>
+
+<h4>SDI-2.0:</h4>
+<p>Americans need security first, not the &quot;Moon Gate&quot;.<br />
+  Biden is  right - the threat of nuclear war is more important than Ukraine.<br />
+  However,  sanctions against Putin are useless.<br />
+  But if  reliable protection appears, the temptation and risk of nuclear war will fall  by an order of magnitude.<br />
+  If in 1983  SDI was a utopia, today it is 100% feasible.</p>
+<p>The optimal  system in terms of cost/reliability is a system of 20,000 moving striking  elements located in low orbits.<br />
+  With modern  communication and data processing capabilities, such a system will be able to  repel even a massive attack of intercontinental ballistic maneuvering warheads.<br />
+  The mass of  each striking element can be no more than that of the Starlink V3 satellite.<br />
+  Its cost  will be close to the cost of Starlink V3 too.<br />
+  Elon Musk's  plans are eventually a Starship launching on a daily basis.<br />
+  Each  Starship launch will launch 60 Starlink V3.<br />
+  Thus, a  reliable security system of Humanity can be created in 1 year</p>
+
+<h5>Technologies determine strategy:</h5>
+<p>Today, the  optimal security technology is - the elimination of key terrorists,  propagandists and owners.<br />
+  The  elimination of hundred terrorist leaders compared to large-scale military  operations:<br />
+  1. Cheaper;<br />
+  2. It will  not provide a pretext for nuclear war and will sharply reduce its risk<br />
+  3. Is  accompanied by orders of magnitude fewer deaths.<br />
+  Today,  security technologies are possible that operate autonomously in control centers  of terrorists, including, for example, optical (9.12 mkm) repeaters that did  not exist before.</p>
+<p>1. Network publicly available non-lethal security  technology will increase the resilience of  democracy;<br />
+  2. The  rulers of the unsteady democracy USA are less dangerous than the dictatorships  of Russia.<br />
+  The US is  threatened by oligarchy. -<br />
+  In the AI  ​​era, the separation of powers no longer guarantees the steadiness of  democracy.<br />
+  A mechanism for democratic control of content is needed, for example  through Starlink.<br />
+  Trump is  like Putin, but today the main threat to democracy in the US is the impact, temptation of the dictatorship in Russia on  the US.<br />
+  Trump is comical in the  way he reneges on his ill-considered  promises</p>
+<p>&quot;Connor&quot; </p>
+<p>Today,  systems including optical (9. 12 mkm) repeaters and networked cruise  micro-missiles with paralyzing elements are capable of - autonomously operating  in control centers of terrorist </p>
+<p>&nbsp;</p>
+
+<h4>- Разослал Конгрессменам штатов США 19.01.25</h4>
+<p><a href="ПОЛИТ%20США/ДЕЯТЕЛИ%20США/California%20State%20Senators%20legislative-roster-state-senate.doc">ПОЛИТ США\ДЕЯТЕЛИ США\California  State Senators legislative-roster-state-senate.doc</a> <br />
+    <a href="ПОЛИТ%20США/ДЕЯТЕЛИ%20США/Сенаторы%20США%20Контакты%20Конспект.docx">ПОЛИТ США\ДЕЯТЕЛИ США\Сенаторы  США Контакты Конспект.docx</a> <br />
+  <a href="ПОЛИТ%20США/ДЕЯТЕЛИ%20США/Сенаторы%20Massachusetts%20%20Конспект.docx">ПОЛИТ США\ДЕЯТЕЛИ США\Сенаторы  Massachusetts  Конспект.docx</a> </p>
+<p><a href="ПОЛИТ%20ОРГ%20Институты%20Устойч%20Технол/Мира%20Междунар%20Безопасн%20Институты%20Орг">ПОЛИТ ОРГ Институты Устойч  Технол\Мира Междунар Безопасн Институты Орг</a> <br />
+    <a href="ПОЛИТ%20ОРГ%20Институты%20Устойч%20Технол/КРЕМЛЕЛОГИЯ%20Институты">ПОЛИТ ОРГ Институты Устойч  Технол\КРЕМЛЕЛОГИЯ Институты</a> <br />
+  …</p>
+<p>Тема: Stop  the war in 1 day</p>
+
+
+</td>
+</tr>
+</table>
+
+</body>
+</html>
