--- a/index.htm
+++ b/index.htm
@@ -24,6 +24,72 @@
  </li>
 
 
+<li>   <h4> 2025 </h4>
+ </li>
+
+<li>   <a href="2025_Eng/11To_Stop_the_war_in_1_day.htm">
+     To Stop the war in 1 day </a>
+ </li>
+<li>   <a href="2025_Eng/12Kaliningrad_corridor_Letter.htm">
+     Kaliningrad corridor Letter; No to War </a>
+ </li>
+<li>   <a href="2025_Eng/13Appeal_23_Black_swan.htm">
+     Appeal 23 Black swan </a>
+ </li>
+<li>   <a href="2025_Eng/14Womens_front.htm">
+     Women's front </a>
+ </li>
+<li>   <a href="2025_Eng/15Anti-Ukrain_policy_of_Ukrainian_governm.htm">
+     Anti-Ukrainian policy of the Ukrainian government </a>
+ </li>
+<li>   <a href="2025_Eng/16Multi-move_Reforming_the_UN.htm">
+     Multi-move Reforming the UN </a>
+ </li>
+<li>   <a href="2025_Eng/21Free_Russia_Program.htm">
+     Free Russia Program; Internationalists; Love Will Save Ukraine </a>
+ </li>
+<li>   <a href="2025_Eng/22The_weakest_link.htm">
+     The weakest link; Who Should Be Executed for the Murder of 200 Women in Labor </a>
+ </li>
+<li>   <a href="2025_Eng/23Manipulation_of_the_people.htm">
+     Manipulation of the people; USA Trump Comments My </a>
+ </li>
+<li>   <a href="2025_Eng/31Deliberative_network.htm">
+     Deliberative Network - Alternative for Germany </a>
+ </li>
+<li>   <a href="2025_Eng/32Crisis_of_Democracy.htm">
+     Crisis of Democracy </a>
+ </li>
+<li>   <a href="2025_Eng/33Peoples_rule.htm">
+     People's rule </a>
+ </li>
+<li>   <a href="2025_Eng/34Migrants_Solution.htm">
+     Migrants Solution </a>
+ </li>
+<li>   <a href="2025_Eng/35Greenland_breakthrough_of_Anarchism.htm">
+     Greenland breakthrough of Anarchism; Pragmatic Initiative </a>
+ </li>
+<li>   <a href="2025_Eng/41Market_property.htm">
+     Market property </a>
+ </li>
+<li>   <a href="2025_Eng/43about_Models.htm">
+     about Models; The Unscientific of Marxism; Monopoly and Polarization </a>
+ </li>
+<li>   <a href="2025_Eng/50Drugs.htm">
+     Drugs; The Final Solution to the Gypsy Question </a>
+ </li>
+<li>   <a href="2025_Eng/60Death_of_God.htm">
+     Death of God; God without God </a>
+ </li>
+<li>   <a href="2025_Eng/70Awl_for_soap_My_mistake_1987.htm">
+     Awl for soap My mistake 1987; DVK </a>
+ </li>
+<li>   <a href="2025_Eng/90Antidepressant_psychic_method_My.htm">
+     Antidepressant psychic method; Other Stars - Method of Reprogram the Subconscious; Pedagogy of Self-Consciousness </a>
+ </li>
+
+
+
 <li>   <h4> 2024 </h4>
  </li>
 
