--- a/index_rus.htm
+++ b/index_rus.htm
@@ -24,6 +24,72 @@
  </li>
 
 
+<li>  <h4> 2025 </h4>
+ </li>
+
+<li>   <a href="2025_Rus/11To_Stop_the_war_in_1_day.htm">
+     Остановить войну за 1 день </a>
+ </li>
+<li>   <a href="2025_Rus/12Kaliningrad_corridor_Letter.htm">
+     Калининградский коридор; Нет Войне </a>
+ </li>
+<li>   <a href="2025_Rus/13Appeal_23_Black_swan.htm">
+     Обращение 23 Черный лебедь </a>
+ </li>
+<li>   <a href="2025_Rus/14Womens_front.htm">
+     Женский фронт </a>
+ </li>
+<li>   <a href="2025_Rus/15Anti-Ukrain_policy_of_Ukrainian_governm.htm">
+     Антиукраинская политика украинского правительства </a>
+ </li>
+<li>   <a href="2025_Rus/16Multi-move_Reforming_the_UN.htm">
+     Многоходовка Реформирование ООН </a>
+ </li>
+<li>   <a href="2025_Rus/21Free_Russia_Program.htm">
+     Программа Свободной России; Интернационалисты; Любовь спасет Украину </a>
+ </li>
+<li>   <a href="2025_Rus/22The_weakest_link.htm">
+     Самое слабое звено; Кто должен быть казнен за убийство 200 рожениц </a>
+ </li>
+<li>   <a href="2025_Rus/23Manipulation_of_the_people.htm">
+     Манипуляция народом; США Трамп; Комментарии Мои </a>
+ </li>
+<li>   <a href="2025_Rus/31Deliberative_network.htm">
+     Совещательная сеть - Альтернатива для Германии </a>
+ </li>
+<li>   <a href="2025_Rus/32Crisis_of_Democracy.htm">
+     Кризис Демократии </a>
+ </li>
+<li>   <a href="2025_Rus/33Peoples_rule.htm">
+     НародоПравление </a>
+ </li>
+<li>   <a href="2025_Rus/34Migrants_Solution.htm">
+     Мигранты Решение </a>
+ </li>
+<li>   <a href="2025_Rus/35Greenland_breakthrough_of_Anarchism.htm">
+     Гренландский прорыв Анархизма; Прагматическая инициатива </a>
+ </li>
+<li>   <a href="2025_Rus/41Market_property.htm">
+     Рыночная собственность </a>
+ </li>
+<li>   <a href="2025_Rus/43about_Models.htm">
+     о Моделях; Ненаучность Марксизма; Монополизм и поляризация </a>
+ </li>
+<li>   <a href="2025_Rus/50Drugs.htm">
+     Наркотики; Окончательное решение цыганского вопроса </a>
+ </li>
+<li>   <a href="2025_Rus/60Death_of_God.htm">
+     Смерть Бога. Бог без Бога.  </a>
+ </li>
+<li>   <a href="2025_Rus/70Awl_for_soap_My_mistake_1987.htm">
+     Шило на мыло Моя ошибка 1987; ДВК </a>
+ </li>
+<li>   <a href="2025_Rus/90Antidepressant_psychic_method_My.htm">
+     Антидепрессант псих методика; Другие звезды - Метод перепрогр-я подсознания; Педагогика Самосознания </a>
+ </li>
+
+
+
 <li>  <h4> 2024 </h4>
  </li>
 
