--- a/2025_Rus/35Greenland_breakthrough_of_Anarchism.htm
+++ b/2025_Rus/35Greenland_breakthrough_of_Anarchism.htm
@@ -233,7 +233,7 @@
 <p>Часто противопоставляют теорию и практику. Возможно, при  этом присутствует манипуляция и провокация – без теоретической разработки и  моделирования практика обречена на провал.<br />
   Нет ничего практичнее хорошей теории.<br />
   Теоретические исследования   необходимы, но я ищу тех, кто хочет заниматься - Прокладными  разработками – ориентированными на непосредственную реализацию, а также  экспериментальной социальной наукой, а не исследованиями имеющими целью  нахождение истины.</p>
-<p><img width="165" height="165" src="../images\Anarh-Cat_Emblema.PNG" alt="Описание: Эмблема анархизма" /><br />
+<p><img width="165" height="165" src="../images/Anarh-Cat_Emblema.png" alt="Описание: Эмблема анархизма" /><br />
   &quot;Connor&quot;<br />
   1748</p>
 <p>&nbsp;</p>
