--- a/2025_Rus/41Market_property.htm
+++ b/2025_Rus/41Market_property.htm
@@ -164,6 +164,24 @@
 <p>К вопросу о том, что &quot;эксплуатация&quot; существует, и  о том, что ее причиной является право частной собственности:<br />
   ( <a href="СОВЕЩАТ%20СЕТЬ/РАССЫЛ%20Статьи%2023-24/Анархизм%20и%20Капитализм.docx">см.: Анархизм  и Капитализм.docx</a> )</p>
 
+<h4>Коррумпированность  науки:</h4>
+<p>Рыночная модель Адама-Смита  совершенно не адекватна реальности.<br />
+  2 главных фактора ее  неадекватности:<br />
+  1. Неравенство людей по отношению  к производственной собственности.<br />
+  2. Нерациональность людей,<br />
+  Причем 1-й фактор намного весомее,  чем 2-й.<br />
+  Удивительно, но он практически не  исследуется.<br />
+  1000 академиков-экономистов  являются дебилами, включая нобелевских лауреатов типа Ричарда Талера ?<br />
+  Нет скорее - мошенниками.<br />
+  Дебильны не они, а -  коррумпированная Гарвардская, Оксфордская и т.п. лже-&quot;наука&quot;.<br />
+  Эта &quot;наука&quot;  не-свободна, &quot;ученые&quot; находятся в подавляющих и ограничивающих  финансовых и организационных условиях.</p>
+<p>2000 лет назад свободного рынка  не было, потому что не были свободны сами люди.<br />
+  Сегодня свободного рынка нет,  потому что не свободна – собственность.</p>
+<p>Допустим, не-раб в государстве,  которое принадлежит государю, пытается произвести продать товар.<br />
+  Поскольку все, даже земля под  прилавком, принадлежит государю, то государь волен оставить не-рабу из цены  продажи лишь столько, чтобы не-раб не умер от голода и мог приносить прибыть  государю – всегда.<br />
+  Это крайняя иллюстрация, лишь  показывающая роль собственности.<br />
+  Сегодня абсолютных государей нет,  но есть много относительных &quot;государей&quot;, имеющих эксклюзивные  производственные права – в той или иной степени.</p>
+
 <h4>Модель короля:</h4>
 <p>Допустим, &quot;король&quot; владеет всей землей в Англии.<br />
   Впрочем, это упрощение близко к исторической реальности.<br />
