--- a/2025_Rus/12Kaliningrad_corridor_Letter.htm
+++ b/2025_Rus/12Kaliningrad_corridor_Letter.htm
@@ -175,7 +175,33 @@
   <a href="https://edil0.github.io/Connor/index_rus.htm">https://edil0.github.io/Connor/index_rus.htm</a> </p>
 <p>&nbsp;</p>
 
-<h2>Нет Войне:</h2>
+<h2>НПО &quot;Нет Войне&quot;:</h2>
+<p>Война в эпоху интернета – это нонсенс.<br />
+  Самая большая ошибка Путина в том, что он относится к своим  &quot;гладиаторам&quot; как к объектам пропаганды.</p>
+<p>Как прекратить войну? -<br />
+  Создать НПО &quot;Нет Войне&quot;.<br />
+  НПО &quot;Нет Войне&quot; должна максимизировать - прямые  контакты с бойцами РФ.<br />
+  Вначале надо максимизировать прямые контакты с ветеранами РФ  – уволившимися и инвалидами.</p>
+<h5>Возможные вопросы прямого диалога:</h5>
+<p>&quot;Мы – независимая организация, не связанная с  Украиной&quot;. &quot;Мы хотим лишь прекратить массовое взаимное истребление&quot;.<br />
+  &quot;Чего Вы хотите? Именно Вы, а не то, что Вам  говорят&quot;<br />
+  &quot;Вы хотите возвращения СССР? Но Вы понимаете, что РФ –  это олигархически-капиталистический антагонист СССР?&quot;<br />
+  &quot;Вы согласны, что цель организаторов войны совсем не  та, которую они декларируют?&quot;<br />
+  &quot;Вы против нацизма?<br />
+  Но Вы согласны, что путинизм, ставящий нацию  &quot;Россия&quot; выше других – это нацизм?<br />
+  Вы согласны, что Европейские демократические нормы лучше  обеспечили бы права русскоязычных на Донбассе, чем бюрократы Путина?<br />
+  Вы согласны, что для защиты русскоязычных война не есть  лучший метод? – Сами дончане уже сожалеют, что согласились на военную защиту Путина&quot;<br />
+  &quot;Вы согласны, что надо требовать не сдачи патриотов  украинцев, что означает продолжение войны, а – гарантии прав донцан с помощью  администрации ООН?&quot;<br />
+  &quot;Вы согласны, что для этого нужен вывод войск из  Донецкой области воюющих сторон и ввод контингента ООН?&quot;<br />
+  &quot;Вы согласны, что путинисты на это не пойдут и что надо  принимать решения без них?&quot;<br />
+  &quot;Вы согласны, что, нацистов в Украине меньше, чем в  РФ?&quot;<br />
+  &quot;Вы согласны, что все признаки фашизма имеет режим  Путина, а не Зеленского?&quot;<br />
+  &quot;Вы согласны, что возможна политическая Программа более  полезная для русских, чем предлагает диктатура Путина?&quot;<br />
+  &quot;Вы согласны, что для предотвращения гражданской войны  в России необходимо мгновенное и поголовное истребление Путина и его высших  военных преступников?&quot;<br />
+  Пока русские едины, они непобедимы жуликами и мошенниками.</p>
+<p>&nbsp;</p>
+<p>***</p>
+
 <p>Впервые в истории человечества сегодня реально прекращение  войн.<br />
   - Благодаря <a href="#_Hlk173613388">унификации права</a>, точнее, благодаря реформе ООН,  точнее, благодаря демократизации международной политической системы.</p>
 
