--- a/2025_Rus/12Kaliningrad_corridor_Letter.htm
+++ b/2025_Rus/12Kaliningrad_corridor_Letter.htm
@@ -188,7 +188,7 @@
   &quot;Вы хотите возвращения СССР? Но Вы понимаете, что РФ –  это олигархически-капиталистический антагонист СССР?&quot;<br />
   &quot;Вы согласны, что цель организаторов войны совсем не  та, которую они декларируют?&quot;<br />
   &quot;Вы против нацизма?<br />
-  Но Вы согласны, что путинизм, ставящий нацию  &quot;Россия&quot; выше других – это нацизм?<br />
+  Но Вы согласны, что путинизм, ставящий нацию  &quot;Россия&quot; выше других  и провоцирующий ненависть к украинской нации – это нацизм?<br />
   Вы согласны, что Европейские демократические нормы лучше  обеспечили бы права русскоязычных на Донбассе, чем бюрократы Путина?<br />
   Вы согласны, что для защиты русскоязычных война не есть  лучший метод? – Сами дончане уже сожалеют, что согласились на военную защиту Путина&quot;<br />
   &quot;Вы согласны, что надо требовать не сдачи патриотов  украинцев, что означает продолжение войны, а – гарантии прав донцан с помощью  администрации ООН?&quot;<br />
