--- a/2025_Rus/12Kaliningrad_corridor_Letter.htm
+++ b/2025_Rus/12Kaliningrad_corridor_Letter.htm
@@ -198,7 +198,7 @@
   &quot;Вы согласны, что все признаки фашизма имеет режим  Путина, а не Зеленского?&quot;<br />
   &quot;Вы согласны, что возможна политическая Программа более  полезная для русских, чем предлагает диктатура Путина?&quot;<br />
   &quot;Вы согласны, что для предотвращения гражданской войны  в России необходимо мгновенное и поголовное истребление Путина и его высших  военных преступников?&quot;<br />
-  Пока русские едины, они непобедимы жуликами и мошенниками.</p>
+  Пока русские едины, они непобедимы жуликами, мошенниками и диктаторами..</p>
 <p>&nbsp;</p>
 <p>***</p>
 
