--- a/2025_Rus/21Free_Russia_Program.htm
+++ b/2025_Rus/21Free_Russia_Program.htm
@@ -190,6 +190,50 @@
   1745</p>
 <p>&nbsp;</p>
 
+
+<h2>Мне нужны контакты &quot;Хороших русских&quot;:</h2>
+<p>Считаю, что надо сотрудничать с &quot;Хорошими  русскими&quot;.<br />
+  Пока что и с ними контакт не получился, но буду пытаться.<br />
+  Крым потерян. Чтобы его вернуть есть только 1 возможность –  договориться с Непримиримыми русскими. – Пообещать им евро-суверенитет в Крыму с  условием вечной унии с Украиной и внешней политикой, определяемой Украиной.<br />
+  Пообещать Крым не только русским, но – анархистам всего  мира.</p>
+<p>&quot;Хороших русских&quot; все загоняют назад в РФ. Это  большая ошибка. <br />
+  Воевать в составе ВСУ готовы немногие. <br />
+  Но еще ≈10  млн уедут из РФ и будут сотрудничать, если будет лучшая альтернатива.<br />
+  Без русских РФ не победить.</p>
+<h5>Процветание - здесь и сейчас:</h5>
+<p>Украинцы не правы – Большинство дончан действительно  захотели в РФ – чисто экономически – там зарплаты выше, чем в Украине.<br />
+  Правда, потом дончане пожалели - они не подумали, что ценой  будет война.<br />
+  Чтобы победить РФ надо всего лишь не ждать когда после  2030-го Евро-комиссия возможно навяжет саботажникам в правительстве Украины законы  ЕС, а - здесь и сейчас создать условия, чтобы зарплаты в Украине были как в  Норвегии.<br />
+  Тогда не только Донбасс захочет вернуться, но и в РФ сами  русские сразу скинут путинцев.<br />
+  Создать условия процветание необходимо – самостоятельно –  ничего не требовать и не протестовать, а просто разработать - параллельные  законы – с помощью плоской &quot;Совещательной сети&quot;.</p>
+<p>Наилучшей же специализацией для украинцев является не С/х, а  – военные разработки. –<br />
+  Украина должна стать фабрикой оружия Западного мира.</p>
+<h4>Плоско-параллельная структура  необходима:</h4>
+<p>По-моему, 24.02.22 самонадеянно колоннами с полицией фашисты  шли на Киев не потому-что дураки, а т к &quot;договорняк&quot; был с кем-то из руководства  в Украине.<br />
+  Украина в ЕС украинским монополистам не выгодна. <br />
+  Но сейчас изменники прикидываются бандеровцами, чт сохранить  посты. <br />
+  Но сейчас не время для разборок с саботажниками. <br />
+  Необходимо просто все делать, не спрашивая разрешения. <br />
+  Но для этого надо создать плоско-параллельную структуру -  для выработки оптимальных законов и решений. <br />
+  Решения же эти - лишь для координации участников, не для  навязывания другим.<br />
+  Иначе саботаж обойдется слишком дорого.<br />
+  <a href="https://edil0.github.io/Connor/2025_Rus/15Anti-Ukrain_policy_of_Ukrainian_governm.htm">https://edil0.github.io/Connor/2025_Rus/15Anti-Ukrain_policy_of_Ukrainian_governm.htm</a></p>
+<h4>Мои комментарии (если не удалили):</h4>
+<h5>&quot;Переход России в высшую категорию  из группы стран с доходами выше среднего&quot;</h5>
+<p>ВНД на душу и доходы населения - это, как говорят в Одессе,  большая разница.<br />
+  В Римской империи ВНД на душу был выше, чем у соседей, но  доходов у рабов почти не было.<br />
+  https://naked-science.ru/community/1027708</p>
+<h5>&quot;В РФ низкий подоходный налог&quot;:</h5>
+<p>налоги и пошлины - с юрлиц, а  те - перекладывают их ценами на население.<br />
+  Правителям налоги не нужны: <br />
+  1. Они приватизировали недра и активы, и имеют с них, <br />
+  2. Они т.о. избегают платы за них<br />
+  В результате юрлица платят низкую зарплату.<br />
+  В Норвегии структура промышленности схожая, но зарплаты в 10  раз выше, а некоторые цены даже ниже. Причина - в демократии и пропаганде.  украинцы захотели обустроиться как в Норвегии, но их не пустили, т к по их  примеру Правители все потеряют.<br />
+  https://naked-science.ru/community/1037002?linked=0</p>
+<p>&quot;Connor&quot;</p>
+<p>&nbsp;</p>
+
 <h2>Интернационалисты:</h2>
 <p>См. также: <a href="Женский%20фронт.docx">Женский  фронт.docx</a> </p>
 <p>Привлечение на фронт граждан КНДР, Кубы и еще кого-попало  дало право участвовать в войне в Украине – организациям добровольцев, не  подчиненных правительствам Украины или европейских государств.<br />
