--- a/2025_Rus/21Free_Russia_Program.htm
+++ b/2025_Rus/21Free_Russia_Program.htm
@@ -200,14 +200,16 @@
   Воевать в составе ВСУ готовы немногие. <br />
   Но еще ≈10  млн уедут из РФ и будут сотрудничать, если будет лучшая альтернатива.<br />
   Без русских РФ не победить.</p>
+
 <h5>Процветание - здесь и сейчас:</h5>
 <p>Украинцы не правы – Большинство дончан действительно  захотели в РФ – чисто экономически – там зарплаты выше, чем в Украине.<br />
   Правда, потом дончане пожалели - они не подумали, что ценой  будет война.<br />
   Чтобы победить РФ надо всего лишь не ждать когда после  2030-го Евро-комиссия возможно навяжет саботажникам в правительстве Украины законы  ЕС, а - здесь и сейчас создать условия, чтобы зарплаты в Украине были как в  Норвегии.<br />
   Тогда не только Донбасс захочет вернуться, но и в РФ сами  русские сразу скинут путинцев.<br />
-  Создать условия процветание необходимо – самостоятельно –  ничего не требовать и не протестовать, а просто разработать - параллельные  законы – с помощью плоской &quot;Совещательной сети&quot;.</p>
+  Создать условия процветание необходимо – самостоятельно –  ничего не требовать и не протестовать, а просто разработать - параллельные  законы – с помощью плоской &quot;Совещательной сети&quot;, а затем провести параллельный e-референдум. </p>
 <p>Наилучшей же специализацией для украинцев является не С/х, а  – военные разработки. –<br />
   Украина должна стать фабрикой оружия Западного мира.</p>
+
 <h4>Плоско-параллельная структура  необходима:</h4>
 <p>По-моему, 24.02.22 самонадеянно колоннами с полицией фашисты  шли на Киев не потому-что дураки, а т к &quot;договорняк&quot; был с кем-то из руководства  в Украине.<br />
   Украина в ЕС украинским монополистам не выгодна. <br />
@@ -218,6 +220,7 @@
   Решения же эти - лишь для координации участников, не для  навязывания другим.<br />
   Иначе саботаж обойдется слишком дорого.<br />
   <a href="https://edil0.github.io/Connor/2025_Rus/15Anti-Ukrain_policy_of_Ukrainian_governm.htm">https://edil0.github.io/Connor/2025_Rus/15Anti-Ukrain_policy_of_Ukrainian_governm.htm</a></p>
+
 <h4>Мои комментарии (если не удалили):</h4>
 <h5>&quot;Переход России в высшую категорию  из группы стран с доходами выше среднего&quot;</h5>
 <p>ВНД на душу и доходы населения - это, как говорят в Одессе,  большая разница.<br />
