--- a/2025_Rus/41Market_property.htm
+++ b/2025_Rus/41Market_property.htm
@@ -239,6 +239,19 @@
   Однако, кроме относительной, здесь более весома – абсолютная  &quot;рента&quot; – высокая цена &quot;труда&quot; предпринимателя определяется  – не-рыночными эффектами, связанными с эксклюзивностью собственности.</p>
 <p>&nbsp;</p>
 
+<h4>Неустойчивость  Синдикализма:</h4>
+<p>Чем плоха Модель, когда  предприятия просто находятся в собственности трудовых коллективов, которые  нанимают себе управляющих? -<br />
+  Абсолютная собственность  порождает абсолютную власть. -<br />
+  Данная Модель, возможно, будет  неустойчивой. - фактическими распорядителями предприятий станут профсоюзные  боссы в сговоре с управляющими.<br />
+  На предприятиях возникнут  маленькие иерархии, и появится класс их руководителей, &quot;красных директоров&quot;,  которые захватят политическую власть в государстве.<br />
+  Идея именно в том, чтобы  собственность была слабой, идея - в &quot;разделении власти&quot; над  собственностью, чтобы распоряжение собственностью было результатом правовой  борьбы многих сил.<br />
+  Однако, чтобы собственность была  слабой, необходимо, чтобы одновременно была слабой и государственная власть,  поскольку исторически право абсолютной частной собственности возникло - для  защиты от рэкета абсолютной государственной иерархии.<br />
+  Но более важная идея заключается  в - максимальном моделировании вариантов социума.<br />
+  Мои рассуждения являются крайне  общими и абстрактными. Возможно, во времена К. Маркса иначе и быть не могло -  &quot;научный марксизм&quot; был невозможен в принципе.<br />
+  Однако сегодня IT, AI позволяют  создавать психологические модели не только одного человека, но и больших  сообществ.<br />
+  Такие модели неизбежно будут  развиваться.<br />
+  Важно, чтобы они были открытыми и  не использовались Правителями для создания Управляемой &quot;демократии&quot;,  которая через 300 лет закончится гибелью Человечества.</p>
+
 <h4>Оптимальная система:</h4>
 <p>Вопрос: При какой  полит-экономической модели &quot;рабочий класс&quot; мог бы получать  максимальную экономическую выгоду?<br />
   Коллективное управление в реальных &quot;колхозах&quot;  вероятно не является оптимальным для этого.<br />
