--- a/2025_Rus/41Market_property.htm
+++ b/2025_Rus/41Market_property.htm
@@ -252,6 +252,11 @@
   Такие модели неизбежно будут  развиваться.<br />
   Важно, чтобы они были открытыми и  не использовались Правителями для создания Управляемой &quot;демократии&quot;,  которая через 300 лет закончится гибелью Человечества.</p>
 
+<h5> Доказательная наука: </h5>
+<p>Лишь в 21-м веке появилась возможность для полностью научной - доказательной социальной науки. <br />
+Сегодня, в эпоху всеобщей статистики и развитых методов обработки Больших данных, очень легко установить факторную связь между степенью монополизма в государствах и нормой прибыли в них. <br />
+Так, в авторитарных государствах, где степень монополизма высока, всегда высока и норма прибыли. </p>
+
 <h4>Оптимальная система:</h4>
 <p>Вопрос: При какой  полит-экономической модели &quot;рабочий класс&quot; мог бы получать  максимальную экономическую выгоду?<br />
   Коллективное управление в реальных &quot;колхозах&quot;  вероятно не является оптимальным для этого.<br />
@@ -550,7 +555,7 @@
   Социально-экономическое неравенство есть главная угроза  существованию Человечества сегодня, поскольку создает соблазн и дает  возможности для манипуляций людьми, используя технологическую  &quot;сингулярность&quot;.<br />
   При этом технологическая &quot;сингулярность&quot;  представляет угрозу не сама по себе, а именно как социально-политический фактор.</p>
 <p>&quot;Connor&quot;<br />
-  25071</p>
+  27836 </p>
 
 
 </td>
